# freemusic

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: release.yml  unit-tests.yml
app/: Cargo.toml
app/src/: gpu.rs  main.rs  midi_overlay.rs  shader.wgsl  ui.rs  video_quad.rs
crates/audio-playback/: Cargo.toml
crates/audio-playback/src/: lib.rs
crates/export/: Cargo.toml
crates/export/src/: audio.rs  gpu.rs  lib.rs
crates/mp4-encoder/: Cargo.toml
crates/mp4-encoder/src/: audio.rs  ff.rs  lib.rs  video.rs
crates/project/: Cargo.toml
crates/project/examples/: dump_sample_styles.rs
crates/project/src/: lib.rs  style.rs
crates/render/: Cargo.toml
crates/render/src/: barrier.rs  barrier.wgsl  effects.rs  effects.wgsl  lib.rs  midi_overlay.rs  shader.wgsl  video_quad.rs
crates/render/src/notes/: instance.rs  mod.rs  pipeline.rs  shader.wgsl
crates/video-pipeline/: Cargo.toml
crates/video-pipeline/examples/: decode_bench.rs
crates/video-pipeline/src/: lib.rs
docs/: architecture.md  building.md  fmstyle-format.md  fmstyle-history.md  fmstyle-milestone.md  implementation-notes.md  ui-milestones.md  verification.md
examples/styles/: barrier-pulse.fmstyle.ron  barrier-strands.fmstyle.ron  barrier-wavy-volume.fmstyle.ron  barrier-wavy.fmstyle.ron  canvas-gradient.fmstyle.ron  dark-background.fmstyle.ron  ellipse-flash.fmstyle.ron  flickering-flash.fmstyle.ron  gradient-glow.fmstyle.ron  grinding-particles.fmstyle.ron  key-glow.fmstyle.ron  match-note-color.fmstyle.ron  note-alpha.fmstyle.ron  photoreal-sunburst.fmstyle.ron  pitch-gradient.fmstyle.ron  pitch-rainbow.fmstyle.ron  showcase_blue_purple.fmstyle.ron  sparks.fmstyle.ron  track-colored-notes.fmstyle.ron  velocity-colored-notes.fmstyle.ron  velocity-sparks.fmstyle.ron  ygradient-particles.fmstyle.ron
explorations/barrier-fx-lab/: README.md  barrier-fx-lab.html
explorations/barrier-fx-lab/presets/: seemusic-found.json
scripts/: build-static-linux.sh  build-static-windows.ps1  check.sh  click.sh  drag.sh  find-window.sh  gen-test-video.sh  kill-app.sh  refresh-sample-styles.sh  run-app.sh  screenshot.sh  setup-msvc-x64.ps1
