[workspace]
resolver = "2"
members = [
  "app",
  "crates/audio-playback",
  "crates/export",
  "crates/mp4-encoder",
  "crates/project",
  "crates/render",
  "crates/video-pipeline",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
