[package]
name = "app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.35.0"
egui-wgpu = "0.35.0"
egui-winit = "0.35.0"
export = { version = "0.1.0", path = "../crates/export" }
pollster = "0.4.0"
project = { version = "0.1.0", path = "../crates/project" }
render = { version = "0.1.0", path = "../crates/render" }
rfd = "0.17"
video-pipeline = { version = "0.1.0", path = "../crates/video-pipeline" }
wgpu = "29.0"
winit = "0.30.13"
