[package]
name = "export"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ffmpeg-next = "8.1.0"
mp4-encoder = { version = "0.0.0", path = "../mp4-encoder" }
pollster = "0.4.0"
project = { version = "0.1.0", path = "../project" }
render = { version = "0.1.0", path = "../render" }
video-pipeline = { version = "0.1.0", path = "../video-pipeline" }
wgpu = "29.0"

[features]
# See crates/mp4-encoder/Cargo.toml for what this does and why.
static-ffmpeg = ["ffmpeg-next/build", "mp4-encoder/static-ffmpeg"]
