[package]
name = "mp4-encoder"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# Upstream code (`src/ff.rs` etc.) refers to this as `ffmpeg::...`, matching Neothesia's own
# workspace-level rename of the crate.
ffmpeg = { package = "ffmpeg-sys-next", version = "8", default-features = false, features = [
    "avformat",
    "swscale",
    "swresample",
] }
libc = "0.2"
