[package]
name = "mp4-encoder"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# Upstream code (`src/ff.rs` etc.) refers to this as `ffmpeg::...`, matching Neothesia's own
# workspace-level rename of the crate.
ffmpeg = { package = "ffmpeg-sys-next", version = "8", default-features = false, features = [
    "avformat",
    "swscale",
    "swresample",
] }
libc = "0.2"

[features]
# Vendors and statically compiles FFmpeg (plus libx264, for the H.264 encoder this crate prefers
# by name in `video.rs`) from source at build time instead of linking the system's FFmpeg dev
# libraries. Used for release binaries so end users don't need FFmpeg installed. See the
# "Static/cross-platform builds" section of the top-level README for prerequisites per OS.
static-ffmpeg = ["ffmpeg/build", "ffmpeg/build-lib-x264", "ffmpeg/build-license-gpl"]
